typeway/tests/compile_fail/ratelimited_missing_trait.stderr
error[E0277]: the trait bound `NotARateLimit: RateLimit` is not satisfied
  --> tests/compile_fail/ratelimited_missing_trait.rs:16:13
   |
16 |     let _ = Server::<API>::new((bind!(get_users),));
   |             ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `RateLimit` is not implemented for `NotARateLimit`
  --> tests/compile_fail/ratelimited_missing_trait.rs:9:1
   |
 9 | struct NotARateLimit;
   | ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `ApiSpec`:
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
             (A, B, C, D, E, F, G, H, I)
           and $N others
   = note: required for `RateLimited<NotARateLimit, Endpoint<Get, HCons<Lit<__lit_users>, HNil>, NoBody, std::string::String>>` to implement `ApiSpec`
   = note: 1 redundant requirement hidden
   = note: required for `(RateLimited<NotARateLimit, Endpoint<Get, HCons<Lit<__lit_users>, HNil>, NoBody, std::string::String>>,)` to implement `ApiSpec`
note: required by a bound in `typeway::Server`
  --> $WORKSPACE/typeway-server/src/server.rs
   |
   | pub struct Server<A: ApiSpec> {
   |                      ^^^^^^^ required by this bound in `Server`

error[E0599]: the function or associated item `new` exists for struct `typeway::Server<(RateLimited<NotARateLimit, Endpoint<Get, HCons<Lit<__lit_users>, HNil>, NoBody, std::string::String>>,)>`, but its trait bounds were not satisfied
  --> tests/compile_fail/ratelimited_missing_trait.rs:16:28
   |
 9 | struct NotARateLimit;
   | -------------------- doesn't satisfy `NotARateLimit: RateLimit`
...
16 |     let _ = Server::<API>::new((bind!(get_users),));
   |                            ^^^ function or associated item cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `NotARateLimit: RateLimit`
           which is required by `(RateLimited<NotARateLimit, Endpoint<Get, HCons<Lit<__lit_users>, HNil>, NoBody, std::string::String>>,): ApiSpec`
note: the trait `RateLimit` must be implemented
  --> $WORKSPACE/typeway-server/src/typed.rs
   |
   | pub trait RateLimit: Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
